fixed scrollbar

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -64,6 +64,7 @@ p {
 #results {
 	background: #fff;
 	width: 100%;
+	height: 100%;
 	overflow: auto;
 }
 
